--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -251,66 +251,20 @@ input[type="number"] {
 .emergency24{
   height: 80vh;
 }
-.faqblock {
-  display: block;
-  width: 90%;
-}
-.faqblock label {
-display:block;
-position:relative;
-padding: 1px 10px;
-margin: 2px;
-height: 50px;
-cursor: pointer;	
-color: #333;
-line-height: 25px;
-font-size: 20px;
-display: flex;
-justify-content: space-between;
-font-weight: bold;
-    border:0;
-
-}
-.faqblock input {
-display: none;
-}
-.faqblock-content {
-  width: 760px;
-  position: absolute;
-  visibility: hidden;
-    border:0;
-
-
-}
-.faqblock:focus {
-  pointer-events: none;
-}
-.faqblock:focus .faqblock-content {
-  visibility: visible;
-  pointer-events: none;
-  position:relative;
-  background-color:#fff;
+.accordion {
+  background: white;
+  border: 1px solid #EDEDED;
+  border-radius: 5px;
+  font-weight: 700;
+  margin: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
 }
 
+.accordionDrop {
+  padding: 0px 30px;
+}
 
-x.faqblock .faqblock-content {
-height: 0px;
-background-color: #fff;
-margin: 2px;
-overflow: hidden;
--webkit-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
--moz-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
--o-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
--ms-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
-}
-x.faqblock input:checked ~ .faqblock-content {
--webkit-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
--moz-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
--o-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
--ms-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
-transition: height 0.5s ease-in-out, box-shadow 0.1s linear;
-}
-x.faqblock input:checked ~ .faqblock-content {
-height: 160px;
+::-webkit-details-marker { 
+  display: none;
 }
