--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -268,3 +268,9 @@ input[type="number"] {
 ::-webkit-details-marker { 
   display: none;
 }
+details > summary {
+  list-style: none;
+}
+details > summary::-webkit-details-marker {
+  display: none;
+}
