--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -274,6 +274,6 @@ details > summary {
 details > summary::-webkit-details-marker {
   display: none;
 }
-.blue{
+.Blue{
   color: rgb(21 127 180);
 }
