--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -316,6 +316,6 @@ details > summary::-webkit-details-marker {
 .blue{
   color: rgb(21 127 180) !important;
 }
-.red{
+/* .red{
   color: red;
-}
+} */
