--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -291,28 +291,41 @@ details > summary::-webkit-details-marker {
 .herocxe h1 {
   font-size: 38px;
   line-height: 45px;
-
 }
 .herocxe h2 {
   color: #157fb4;
   font-size: 22px;
   font-weight: 600;
   padding-top: 10px;
-  
 }
 .herocxe h3 {
   font-size: 18px;
 }
-.herocxe h3 a{
+.herocxe h3 a {
   font-weight: 600;
 }
-.herocxe h4{
+.herocxe h4 {
   margin: 10px 0;
   font-size: 20px;
   border-top: 1px solid #00000018;
   font-weight: 600;
   border-bottom: 1px solid #00000018;
 }
-.blue{
+.blue {
   color: rgb(21 127 180) !important;
+}
+.t-style {
+  text-align: center;
+  font-size: 45px;
+  line-height: 60px;
+  font-weight: 500;
+}
+.p-style {
+  font-size: 18px;
+  text-align: center;
+  color: #0000007d;
+  max-width: 1100px;
+  margin: auto;
+  line-height: 33px;
+  letter-spacing: 0.4px;
 }
