--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -388,4 +388,23 @@ details > summary::-webkit-details-marker {
   line-height: 25px;
 
 }
+.nove-3{
+  padding: 20px;
+  width: 20%;
+  height: 406px;
+  background: rgb(235 252 250) !important;
+  border-radius: 10px;
+}
+.nove-3 h2{
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 35px;
+  text-align: center;
+}
+.nove-3 p{
+  font-size: 16px;
+  text-align: center;
+  color: #0000007d;
+  line-height: 25px;
 
+}
