--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -408,3 +408,14 @@ details > summary::-webkit-details-marker {
   line-height: 25px;
 
 }
+@media (min-width: 768px) {
+  .nove{
+    width: 100%;
+  }
+  .nove-1{
+    width: 100%;
+  }
+  .nove-3{
+    width: 100%;
+  }
+}
