--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -408,7 +408,7 @@ details > summary::-webkit-details-marker {
   line-height: 25px;
 
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .nove{
     width: 100%;
   }
